<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/nav_view">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/headers_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/offer_tab"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:layout_constraintTop_toBottomOf="@+id/headers_rv">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/shop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/aed300"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@id/offer"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/offer" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/offer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:backgroundTint="@android:color/holo_orange_dark"
                        android:clickable="false"
                        android:text="@string/off"
                        app:cornerRadius="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <!--            -->

                <TextView
                    android:id="@+id/best_practice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_practice"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/shop_btn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/shop_btn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shop_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:paddingHorizontal="30dp"
                    android:text="@string/shop"
                    android:textSize="18sp"
                    app:backgroundTint="@android:color/holo_blue_light"
                    app:cornerRadius="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/offer_tab" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/main_category_tab"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/shop_btn">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/main_category_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <!---->
                <TextView
                    android:id="@+id/new_arrived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/best_title"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/main_category_tab" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/arrivals_tab"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:layout_constraintTop_toBottomOf="@+id/new_arrived">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/arrivals_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--            -->

                <TextView
                    android:id="@+id/top_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/top_title"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/arrivals_tab" />
                <!---->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/top_tab"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:layout_constraintHeight_percent=".3"
                    app:layout_constraintTop_toBottomOf="@+id/top_title">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/top_rv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <!--            -->
                <TextView
                    android:id="@+id/shop_by_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:textAllCaps="true"
                    android:text="@string/shop_by_category"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top_tab" />

                <TextView
                    android:id="@+id/view_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/view_all"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top_tab" />
                <!---->


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:labelVisibilityMode="unlabeled"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>