<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="110dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="1dp"
    android:layout_marginBottom="16dp">
    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:src="@drawable/arrivals"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_favorite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        android:paddingHorizontal="2dp"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="4dp"
        android:background="#1C000000"/>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressTint="@android:color/holo_orange_dark"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="3"
        android:rating="100"
        android:stepSize="0.00"
        android:isIndicator="true"
        android:layout_margin="4dp"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/strike_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strike_zero"
        android:textSize="12sp"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:text="00%"
        android:paddingHorizontal="5dp"
        android:background="@drawable/round_bg"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image"/>

    <TextView
        android:id="@+id/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00.00/-"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/strike_zero"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_service"
        android:layout_marginTop="2dp"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zero"/>







</androidx.constraintlayout.widget.ConstraintLayout>